2006-11-28  Thorsten Kukuk  <kukuk@suse.de>

	* man/ypcat.1.in: Fix typo.

2006-11-28  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.10

	* m4/gettext.m4: Upgrade to gettext-0.15.
	* m4/inttypes-h.m4: New file, from gettext-0.15.
	* m4/inttypes-pri.m4: Upgrade to gettext-0.15.
	* m4/lib-link.m4: Upgrade to gettext-0.15.
	* m4/lib-prefix.m4: Upgrade to gettext-0.15.
	* m4/lock.m4: New file, from gettext-0.15.
	* m4/longdouble.m4: Upgrade to gettext-0.15.
	* m4/nls.m4: Upgrade to gettext-0.15.
	* m4/po.m4: Upgrade to gettext-0.15.
	* m4/size_max.m4: Upgrade to gettext-0.15.
	* m4/visibility.m4: New file, from gettext-0.15.

	* po/sv.po: New swedish translation from
	Daniel Nylander <info@danielnylander.se>.

2004-06-21  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.9

	* src/yppasswd.c (main): Fix one byte overrun (reported
	by Alan Cox <alan@redhat.com>).

	* src/yppasswd.1.in: Fix yppasswd option (-p)
	Declare ypasswd, ypchsh and ypchfn as deprecated

2003-05-15  Thorsten Kukuk  <kukuk@suse.de>

	* lib/yp_all_host.c (yp_all_host): status is signed.
	* man/domainname.8.in: Add hint about programs caching
	the domainname

2002-03-07  Thorsten Kukuk  <kukuk@suse.de>

	* man/ypcat.1.in: fix typo (yset -> ypset).
        Reported by Hector Del Manzano <inq@charma.uprm.edu>.

2002-12-05  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.8

	* src/yppasswd.c (ypgetpw): Cast result of sizeof to int.

2002-05-30  Thorsten Kukuk  <kukuk@suse.de>

	* src/yppasswd.c (main): Make sure strings are NUL terminated
	after strncpy. Reported by Peter Breitenlohner <peb@mppmu.mpg.de>.

2002-05-23  Martin Vidner  <mvidner@suse.cz>

	* man/yptest.8.in: Fix some typos

2002-05-13  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.7

	* src/yptest.c: Implement -q option.
	* man/yptest.8.in: Document all options.

	* man/ypset.8.in: Fix nroff syntax error.

	* man/yppasswd.1: Fix typo in yppasswd option.
