@@ -52,6 +52,7 @@ AC_ARG_ENABLE(call-passwd,
 
 dnl Checks for programs.
 AC_PROG_CC
+AM_PROG_CC_C_O
 dnl If we're using gcc, we want warning flags
 dnl test -n "$GCC" && WARNFLAGS="-Wall"
 test -n "$GCC" && WARNFLAGS="-W -Wall -Wbad-function-cast -Wcast-align -Winline -Wmissing-declarations -Wmissing-prototypes -Wnested-externs -Wshadow -Wstrict-prototypes -Wundef"
