@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 1998, 1999, 2001, 2004 Thorsten Kukuk
+.\" Copyright (C) 1998, 1999, 2001, 2004, 2007 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@suse.de>
+.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,7 +16,7 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH yppasswd 1 "June 2004" "YP Tools @VERSION@"
+.TH yppasswd 1 "January 2007" "YP Tools @VERSION@"
 .SH NAME
 yppasswd, ypchfn, ypchsh \- change your password in the NIS database
 .SH SYNOPSIS
@@ -154,4 +154,4 @@ To accept a default, simply press return. To clear a field, enter the string
 .B yppasswd
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@suse.de>.
+package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
