@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 1998, 1999, 2001, 2002 Thorsten Kukuk
+.\" Copyright (C) 1998, 1999, 2001, 2002, 2007 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@suse.de>
+.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,10 +16,10 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH ypset 8 "May 1998" "YP Tools @VERSION@"
+.TH ypset 8 "January 2007" "YP Tools @VERSION@"
 .SH NAME
 ypset - bind ypbind to a particular NIS server
-.SH SYNOPSYS
+.SH SYNOPSIS
 .B ypset
 [
 .BI \-d " domain"
@@ -105,4 +105,4 @@ Set the NIS binding on host
 .B ypset
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@suse.de>.
+package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
