@@ -1,7 +1,7 @@
 .\" -*- nroff -*-
-.\" Copyright (C) 2002 Thorsten Kukuk
+.\" Copyright (C) 2002, 2007 Thorsten Kukuk
 .\" This file is part of the yp-tools.
-.\" Author: Thorsten Kukuk <kukuk@suse.de>
+.\" Author: Thorsten Kukuk <kukuk@thkukuk.de>
 .\"
 .\" This program is free software; you can redistribute it and/or modify
 .\" it under the terms of the GNU General Public License version 2 as
@@ -16,10 +16,10 @@
 .\" along with this program; if not, write to the Free Software Foundation,
 .\" Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 .\"
-.TH yptest 8 "May 2002" "YP Tools @VERSION@"
+.TH yptest 8 "January 2007" "YP Tools @VERSION@"
 .SH NAME
 yptest - test NIS configuration
-.SH SYNOPSYS
+.SH SYNOPSIS
 .B yptest [\fB-q\fR] [\fB-d \fIdomain\fR] [\fB-h \fIhost\fR] [\fB-m \fImap\fR] [\fB-u \fIuser\fR]
 .LP
 .SH DESCRIPTION
@@ -75,4 +75,4 @@ option).
 .B yptest
 is part of the
 .B yp-tools
-package, which was written by Thorsten Kukuk <kukuk@suse.de>.
+package, which was written by Thorsten Kukuk <kukuk@thkukuk.de>.
