@@ -1,3 +1,15 @@
+2007-01-24  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* man/ypwhich.1.in: Fix spelling errors.
+	* man/domainname.8.in: Likewise.
+	* man/nicknames.5.in: Likewise.
+	* man/ypcat.1.in: Likewise.
+	* man/ypmatch.1.in: Likewise.
+	* man/yppasswd.1.in: Likewise.
+	* man/yppoll.8.in: Likewise.
+	* man/ypset.8.in: Likewise.
+	* man/yptest.8.in: Likewise.
+
 2006-11-28  Thorsten Kukuk  <kukuk@suse.de>
 
 	* man/ypcat.1.in: Fix typo.
